# ncnn-android-yolov7

./: local.properties
app/: build.gradle
app/src/main/java/com/tencent/ncnnyolov7/: MainActivity.java
app/src/main/jni/: CMakeLists.txt  ndkcamera.cpp  yoloncnn.cpp
gradle/wrapper/: gradle-wrapper.properties
